// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainEditor CameraView test set currentSceneTreeNode to be camera test set current camera test snapshot test if camera is currentCamera, the cameraView checkBox defaultChecked should == true and disabled should == true  1`] = `
<article
  className="wonder-camera-view"
>
  <article
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      <span
        className=""
      >
        Type
      </span>
    </div>
    <div
      className="item-content"
    >
      <select
        onChange={[Function]}
        value="0"
      >
        <option
          value="0"
        >
          basic_cameraView
        </option>
      </select>
    </div>
  </article>
  <div
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      CurrentCamera
    </div>
    <div
      className="item-content"
    >
      <input
        defaultChecked={true}
        disabled={true}
        onClick={[Function]}
        type="checkbox"
      />
    </div>
  </div>
</article>
`;

exports[`MainEditor CameraView test set currentSceneTreeNode to be camera test set current camera test snapshot test if camera isn't currentCamera, the cameraView checkBox defaultChecked should == false and disabled should == false  1`] = `
<article
  className="wonder-camera-view"
>
  <article
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      <span
        className=""
      >
        Type
      </span>
    </div>
    <div
      className="item-content"
    >
      <select
        onChange={[Function]}
        value="0"
      >
        <option
          value="0"
        >
          basic_cameraView
        </option>
      </select>
    </div>
  </article>
  <div
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      CurrentCamera
    </div>
    <div
      className="item-content"
    >
      <input
        defaultChecked={false}
        disabled={false}
        onClick={[Function]}
        type="checkbox"
      />
    </div>
  </div>
</article>
`;

exports[`MainEditor CameraView test set currentSceneTreeNode to be camera test set current camera test snapshot test set unactive camera to be currentCamera, the currentCamera->cameraView checkBox defaultChecked should == true and disabled should == true 1`] = `
<article
  className="wonder-camera-view"
>
  <article
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      <span
        className=""
      >
        Type
      </span>
    </div>
    <div
      className="item-content"
    >
      <select
        onChange={[Function]}
        value="0"
      >
        <option
          value="0"
        >
          basic_cameraView
        </option>
      </select>
    </div>
  </article>
  <div
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      CurrentCamera
    </div>
    <div
      className="item-content"
    >
      <input
        defaultChecked={true}
        disabled={true}
        onClick={[Function]}
        type="checkbox"
      />
    </div>
  </div>
</article>
`;
